[project]
name = "form-filling-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "pymongo>=4.15.4",
    "python-dateutil>=2.9.0.post0",
    "qwen-agent>=0.0.31",
    "transformers>=4.45.0",
    "autoawq>=0.2.0",
]
